modify price_fetcher